<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.mhaque.javase</groupId>
	<artifactId>javase-example</artifactId>
	<packaging>pom</packaging>
	<version>1.0-SNAPSHOT</version>

	<properties>
		<junit-version>4.4</junit-version>
		<maven.compiler.source>13</maven.compiler.source>
		<maven.compiler.target>13</maven.compiler.target>
	</properties>

	<modules>
		<module>java13-example</module>
		<module>java12-example</module>
		<module>java8-example</module>
		<module>uva-onlinejudge</module>
		<module>apache-camel</module>
		<module>project-lombok</module>
		<module>design-pattern</module>
		<module>algorithm</module>
		<module>activemq</module>
		<module>data-structure</module>
		<module>elasticsearch</module>
		<module>xml-jaxb</module>
		<module>java9-multimodule</module>
		<module>basic</module>
		<module>advance</module>
		<module>reporting</module>
		<module>machine-learning</module>
		<module>ad-integ</module>
		<module>json-jackson</module>
		<module>apache-spark</module>
	</modules>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit-version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies> 

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>13</release>
					<compilerArgs>
						--enable-preview
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>